--- a/Integrate PayPal Statements/app.json
+++ b/Integrate PayPal Statements/app.json
@@ -3,26 +3,29 @@
   "name": "Integrate PayPal Statements",
   "publisher": "Kappi ehf.",
   "version": "1.0.0.0",
-  "brief": "",
-  "description": "",
-  "privacyStatement": "",
-  "EULA": "",
-  "help": "",
-  "url": "",
-  "logo": "",
+  "brief": "Import format for bank statements from PayPal",
+  "description": "Adds import format and required code to import bank statements from PayPal",
+  "logo": "logo/Logo250x250.png",
+  "url": "https://kappi.is",
+  "EULA": "https://kappi.is/terms",
+  "privacyStatement": "https://kappi.is/privacy",
+  "help": "https://kappi.is/",  
+  "applicationInsightsConnectionString": "InstrumentationKey=ab5e692a-2ef8-40ac-bed4-74fe61285bf2;IngestionEndpoint=https://westeurope-1.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/",  
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
   "application": "19.0.0.0",
   "idRanges": [
     {
-      "from": 65000,
-      "to": 65009
+      "from": 65200,
+      "to": 65209
     }
   ],
   "resourceExposurePolicy": {
     "allowDebugging": true,
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
-  }
+  },
+  "features": ["NoImplicitWith","TranslationFile"],
+  "suppressWarnings": ["AA0072"]
 }
