--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -1,6 +1,9 @@
 {
   "country": "is",
-  "appFolders": ["Integrate PayPal Statements"],
+  "appFolders": [
+    "Integrate PayPal Statements"
+  ],
   "testFolders": [],
-  "bcptTestFolders": []
+  "bcptTestFolders": [],
+  "repoVersion": "21.1"
 }
