--- a/Integrate PayPal Statements/app.json
+++ b/Integrate PayPal Statements/app.json
@@ -2,15 +2,15 @@
   "id": "a2a89636-7954-4fd2-a210-f406ff8449b2",
   "name": "Integrate PayPal Statements",
   "publisher": "Kappi ehf.",
-  "version": "1.0.0.0",
+  "version": "21.1.0.0",
   "brief": "Import format for bank statements from PayPal",
   "description": "Adds import format and required code to import bank statements from PayPal",
   "logo": "logo/Logo250x250.png",
   "url": "https://kappi.is",
   "EULA": "https://kappi.is/terms",
   "privacyStatement": "https://kappi.is/privacy",
-  "help": "https://kappi.is/",  
-  "applicationInsightsConnectionString": "InstrumentationKey=ab5e692a-2ef8-40ac-bed4-74fe61285bf2;IngestionEndpoint=https://westeurope-1.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/",  
+  "help": "https://kappi.is/",
+  "applicationInsightsConnectionString": "InstrumentationKey=ab5e692a-2ef8-40ac-bed4-74fe61285bf2;IngestionEndpoint=https://westeurope-1.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/",
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
@@ -26,6 +26,11 @@
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
   },
-  "features": ["NoImplicitWith","TranslationFile"],
-  "suppressWarnings": ["AA0072"]
+  "features": [
+    "NoImplicitWith",
+    "TranslationFile"
+  ],
+  "suppressWarnings": [
+    "AA0072"
+  ]
 }
